# commercial-data-adaptors

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  pyrightconfig.json  stac.json
.github/workflows/: actions.yaml
airbus/: airbus-optical-multi.cwl  airbus-optical-multi.http  airbus-optical.cwl  airbus-optical.http  airbus-sar.cwl  airbus-sar.http  build_tag_push_optical.sh  requirements.txt
airbus-sar/: Dockerfile  airbus-sar.cwl  airbus-sar.http  requirements.txt
airbus-sar/airbus-sar-adaptor/: __main__.py
airbus-sar/airbus_sar_adaptor/: __main__.py  api_utils.py  s3_utils.py  stac_utils.py
airbus/airbus_optical_adaptor/: Dockerfile  __main__.py  api_utils.py
airbus/airbus_sar_adaptor/: Dockerfile  __main__.py  api_utils.py
airbus/common/: auth_utils.py  gdal_utils.py  pulsar_utils.py  s3_utils.py  stac_utils.py
open-cosmos/: Dockerfile  README.md  open-cosmos.cwl  requirements.txt
open-cosmos/open_cosmos_adaptor/: __main__.py  auth_utils.py  s3_utils.py  stac_utils.py
planet/: Dockerfile  README.md  build_tag_push_planet.sh  planet.cwl  planet.http  requirements-dev.txt  requirements.txt
planet/planet_adaptor/: __main__.py  api_utils.py  gdal_utils.py  s3_utils.py  stac_utils.py
